commit 0.1.0 added changes for add-card module, svg refactored, 21-Feb-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "Comfortaa";
   src: url("../fonts/Comfortaa-Bold.eot");
@@ -286,7 +285,6 @@
   font-style: normal;
   font-display: swap;
 }
-
 * {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -351,10 +349,10 @@ a {
   text-decoration: none;
   font-family: "Comfortaa";
   /*font-style: normal;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 34px;
-	text-align: center;*/
+font-weight: 500;
+font-size: 14px;
+line-height: 34px;
+text-align: center;*/
   color: #0081c5;
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
@@ -365,6 +363,17 @@ a {
 a:hover {
   color: #333;
 }
+/* Start Common IN Full site */
+.input-with-ic {
+  filter: drop-shadow(0px 2px 4px rgba(37, 31, 48, 0.2));
+  background-color: #ffffff;
+  border-radius: 18px !important;
+}
+.input-with-ic .form-control {
+  filter: none !important;
+  background-color: transparent !important;
+}
+/* End Common IN Full site */
 .app-bg::before {
   position: absolute;
   content: "";
@@ -409,17 +418,17 @@ ul {
 }
 /* login signup page css starts*/
 /*.common-body-bg::before {
-	position: absolute;
-	content: "";
-	display: block;
-	left: 0;
-	right: 0;
-	z-index: -1;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.6) 20.31%, rgba(255, 255, 255, 0) 100%);
-	pointer-events: none;
+position: absolute;
+content: "";
+display: block;
+left: 0;
+right: 0;
+z-index: -1;
+top: 0;
+bottom: 0;
+margin: auto;
+background: radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.6) 20.31%, rgba(255, 255, 255, 0) 100%);
+pointer-events: none;
 }*/
 .common-body-bg::after {
   position: absolute;
@@ -479,7 +488,7 @@ form .form-field .form-control {
   /* filter: drop-shadow(0px 3.76623px 15.6926px rgba(37, 31, 48, 0.2)); */
   filter: drop-shadow(0px 2px 4px rgba(37, 31, 48, 0.2));
   background-color: #ffffff;
-  padding: 13px 22px !important;
+  padding: 17px 22px !important;
   font-family: "Comfortaa";
   font-style: normal;
   font-weight: 500;
@@ -559,8 +568,8 @@ form {
   margin-bottom: 0;
 }
 .login-signup-content-wrap {
-  /* max-height: 90vh; */
-  /* overflow-y: auto; */
+  max-height: 90vh;
+  overflow-y: auto;
 }
 .login-other-text:after {
   content: "";
@@ -714,10 +723,11 @@ form .form-field {
 form .form-field .eye-icon {
   position: absolute;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   left: auto;
   right: 18px;
-  top: 17px;
+  top: 50%;
+  transform: translateY(-50%);
   bottom: auto;
   margin: auto;
   cursor: pointer;
@@ -857,7 +867,7 @@ form .form-field select.form-control {
 .dashboard-link-wrap {
   display: flex;
   flex-wrap: wrap;
-  /*height: inherit;*/
+  height: calc(100% - 138px);
   padding-top: 43px;
   padding-bottom: 29px;
   background-color: #0081c5;
@@ -899,8 +909,8 @@ form .form-field select.form-control {
   margin-bottom: 17px;
 }
 .dashboard-bottom-links {
-  margin-top: 156px;
-  margin-bottom: auto;
+  margin-top: auto;
+  margin-bottom: 0;
 }
 .sidebar-open .dashboard-link-wrap ul li a {
   font-size: 0;
@@ -1301,12 +1311,12 @@ form .form-field select.form-control {
 }
 /*
 .settings-notifications-bottom-info-sec .form-switch .form-check-input + label {
-	position: absolute;
-	left: 0;
-	right: auto;
-	top: 0;
-	bottom: 0;
-	margin: auto;
+position: absolute;
+left: 0;
+right: auto;
+top: 0;
+bottom: 0;
+margin: auto;
 }*/
 .settings-notifications-bottom-info-sec
   .form-switch
@@ -1337,31 +1347,35 @@ form .form-field select.form-control {
 .settings-notifications-bottom-info-sec ul {
   padding-bottom: 46px;
 }
-.setting-btn-link a {
+.setting-btn-link a,
+.outline-btn {
   background-color: #fff;
   border: 1.5px solid #0081c5;
   border-radius: 12px;
-  padding: 12px 32px 12px 22px;
+  padding: 13px 32px 13px 22px;
   font-family: "Visby Round CF";
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 22px;
   text-align: center;
   color: #0081c5;
   display: inline-flex;
   flex-wrap: wrap;
   align-items: center;
 }
-.setting-btn-link a svg {
+.setting-btn-link a svg,
+.outline-btn svg {
   margin-right: 16px;
 }
-.setting-btn-link a:hover {
-  background-color: #333;
-  border-color: #333;
+.setting-btn-link a:hover,
+.outline-btn:hover {
+  background-color: #363853;
+  border-color: #363853;
   color: #fff;
 }
-.setting-btn-link a:hover svg path {
+.setting-btn-link a:hover svg path,
+.outline-btn:hover svg path {
   stroke: #fff;
 }
 .settings-notifications-bottom-info-sec .settings {
@@ -1423,10 +1437,10 @@ form .form-field select.form-control {
   margin: 0;
   padding: 17px 0 30px;
 }
-.settings-profile-bottom-info-sec .login-btn input[type="submit"] {
+.settings-profile-bottom-info-sec .login-btn .btn {
   min-width: 183px;
   font-size: 16px;
-  padding: 16px 10px;
+  padding: 16px 25px;
   font-weight: 500;
   line-height: 18px;
 }
@@ -1554,8 +1568,8 @@ form .form-field select.form-control {
   justify-content: center;
 }
 .modal {
-  background: rgba(0, 0, 0, 0.74);
-  backdrop-filter: blur(0px);
+  background: rgba(54, 56, 83, 0.3);
+  backdrop-filter: blur(2.5px);
 }
 .modal-dialog {
   display: flex;
@@ -1980,7 +1994,7 @@ form .search-field -o::placeholder {
 }
 .extra-links-wrap ul li a {
   /*background-color: #fff;
-	box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
+box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   border-radius: 15px;
   font-family: "Visby Round CF";
   font-style: normal;
@@ -3173,6 +3187,11 @@ span.date-cal {
   background-color: #fff;
   box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
 }
+.user-thumb-name {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
 .act-user-content-wrap .user-thumb-name img {
   width: 48px;
   height: 48px;
@@ -3219,6 +3238,7 @@ img.img-hover {
   font-size: 16px;
   line-height: 19px;
   text-align: right;
+  font-family: "Visby Round CF";
 }
 .activity-month {
   font-family: "Quicksand";
@@ -3544,8 +3564,8 @@ ul.radio-group-wrap li {
   padding: 13px 10px;
 }
 .radio-group-wrap .radio-round {
-  width: 42px;
-  height: 42px;
+  width: 48px;
+  height: 48px;
   background-color: #fff;
   border: 1px solid;
   border-color: transparent;
@@ -3622,6 +3642,8 @@ div.row {
   line-height: 28px;
   color: #fff;
   z-index: 9;
+  text-shadow: -1px -1px 3px rgb(255 255 255 / 55%),
+    2px 2px 4px rgb(0 0 0 / 45%);
 }
 .card-num-date p:first-child {
   font-family: "Comfortaa";
@@ -3630,7 +3652,7 @@ div.row {
   font-size: 22px;
   line-height: 22px;
   color: #fff;
-  margin-bottom: 12px;
+  margin-bottom: 20px;
   letter-spacing: 0.25em;
 }
 .card-num-date p:last-child {
@@ -3644,6 +3666,8 @@ div.row {
 }
 .wallet-ac-info-wrap .wallet-ac-inner {
   background: #0081c5;
+  /*background-color: rgb(0 0 0 / 35%);
+  background-blend-mode: overlay;*/
   box-shadow: 0px 7.13683px 14.2737px rgba(146, 123, 193, 0.3);
   border-radius: 35px;
   padding: 50px 10px 20px 40px;
@@ -3652,9 +3676,16 @@ div.row {
   width: 100%;
   height: 212px;
   position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.wallet-ac-info-wrap div {
-  z-index: 9;
+.wallet-slider {
+  padding-left: 12px;
+}
+.wallet-ac-info-wrap div,
+.wallet-slider .wallet-ac-inner div {
+  z-index: 1;
 }
 .wallet-ac-info-wrapp .card-holder-nm {
   margin-bottom: auto;
@@ -3666,6 +3697,8 @@ div.row {
 .wallet-ac-inner p {
   width: 100%;
   z-index: 9;
+  text-shadow: -1px -1px 3px rgba(255, 255, 255, 0.55),
+    2px 2px 4px rgba(0, 0, 0, 0.45);
 }
 .wallet-ac-inner > svg {
   position: absolute;
@@ -3742,12 +3775,12 @@ div.row {
   font-family: "Comfortaa";
 }
 /*.wallet-add-card-main .dashboard-main-links{
-	margin-bottom:auto;
-	margin-top:0px;
+margin-bottom:auto;
+margin-top:0px;
 }
 .wallet-add-card-main .dashboard-bottom-links{
-	margin-top:auto;
-	margin-bottom:0px;
+margin-top:auto;
+margin-bottom:0px;
 }*/
 /* Wallet Bank Link */
 .wallet-link-bank-bottom {
@@ -3859,7 +3892,7 @@ div.row {
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 .wallet-fund-form-wrap .amount-total {
   margin-left: 20px;
@@ -3946,11 +3979,15 @@ div.row {
 }
 .fund-sucess-modal .modal-body h3 {
   font-weight: 700;
-  font-size: 31px;
-  line-height: 40px;
+  font-size: 28px;
+  line-height: 33px;
   margin-bottom: 20px;
   padding-bottom: 0px;
   font-family: "Visby Round CF";
+}
+.fund-sucess-modal .modal-body h3 span {
+  font-size: 31px;
+  line-height: 36px;
 }
 .fund-sucess-modal .modal-body p {
   font-family: "Visby Round CF";
@@ -4109,16 +4146,16 @@ div.row {
   border-color: #363853 !important;
 }
 /*.con-listing-edit-wrap>.cl-edit-inner {
-    background: #F3F3F3;
-    border-radius: 8px;
-    width: 32px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10px;
-    margin-right: 10px;
-	cursor:pointer;
+  background: #F3F3F3;
+  border-radius: 8px;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  margin-right: 10px;
+cursor:pointer;
 }*/
 .conlist-edit-a {
   cursor: pointer;
@@ -4219,9 +4256,13 @@ div.row {
   color: #363853;
 }
 /* Wallet Page Start */
+.wallet-main-right {
+  margin-bottom: 50px;
+}
 .wallet-recent-activity-sec ul li .user-info {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
+  white-space: nowrap;
   justify-content: space-between;
   align-items: center;
   padding: 10px 12px;
@@ -4229,6 +4270,26 @@ div.row {
   background-color: transparent;
   transition: all 0.5s ease-in-out;
   border-radius: 15px;
+  overflow-x: auto;
+}
+.wallet-recent-activity-sec .user-img-title-wrap {
+  min-width: 185px;
+  max-width: 185px;
+}
+.wallet-recent-activity-sec .user-info .date-info {
+  min-width: 170px;
+  max-width: 170px;
+}
+.wallet-recent-activity-sec .price-info {
+  min-width: 90px;
+  max-width: 90px;
+}
+.wallet-recent-activity-sec .user-info > div {
+  margin-right: 10px;
+  white-space: normal;
+}
+.wallet-recent-activity-sec .user-info > div:last-child {
+  margin-right: 0px;
 }
 .wallet-recent-activity-sec ul li .user-info:hover {
   background-color: #fff;
@@ -4276,4 +4337,266 @@ div.row {
   left: auto;
   z-index: -1;
 }
-/* Wallet Page Start */
+.wallet-title-wrap {
+  display: flex;
+  align-items: center;
+}
+.wallet-title-btns {
+  max-width: 365px;
+  margin-left: auto;
+  margin-right: 0;
+  width: 100%;
+}
+/*.wallet-title-btns span.wallet-icon-span {
+  background: #0081C5;
+  box-shadow: 0px 7.3125px 14.625px rgba(0, 0, 0, 0.08);
+  width: 39px;
+  height: 39px;
+  border-radius: 50%;
+  margin-right: 15px;
+  display: inline-block;
+  vertical-align: middle;
+}*/
+.wallet-title-btns a img {
+  margin-right: 15px;
+}
+.wallet-title-btns a {
+  padding: 17px 12px;
+  box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
+  border-radius: 16px;
+  background: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+}
+.wallet-title-btns a span:last-child {
+  max-width: 86px !important;
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+.wallet-title-btns a.wallet-top-1-btn {
+  color: #0081c5;
+  margin-right: 20px;
+}
+.wallet-title-btns a.wallet-top-2-btn {
+  color: #936ee3;
+}
+.wallet-slider .wallet-ac-inner {
+  background: #0081c5;
+  box-shadow: 0px 7.13683px 14.2737px rgb(146 123 193 / 30%);
+  border-radius: 35px;
+  padding: 50px 10px 20px 40px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 212px;
+  position: relative;
+}
+.wallet-slider .swiper-3d .swiper-slide-shadow {
+  background: transparent;
+}
+.wallet-slider .swiper-wrapper {
+  margin-bottom: 60px;
+}
+.wallet-slider .swiper-scrollbar.swiper-scrollbar-horizontal,
+.wallet-slider .swiper-button-next,
+.wallet-slider .swiper-button-prev {
+  bottom: -50px;
+}
+.wallet-main-left {
+  width: calc(100% - 420px);
+}
+.wallet-main-right {
+  width: 420px;
+  padding-left: 45px;
+}
+/* Wallet Page End */
+.wallet-card-add-btns {
+  display: flex;
+  align-items: center;
+}
+.wallet-card-add-btns a {
+  padding: 17px 12px;
+  box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
+  border-radius: 16px;
+  background: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #0081c5;
+}
+.wallet-card-add-btns a:first-child {
+  margin-right: 18px;
+  color: #363853;
+}
+.wallet-card-add-btns a img {
+  margin-right: 15px;
+}
+.wallet-card-add-btns a span {
+  display: inline-block;
+  max-width: 86px;
+  vertical-align: middle;
+}
+.wc-details-wrap table {
+  width: 100%;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.wc-details-wrap td {
+  font-family: "Visby Round CF";
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 20px 0px;
+  width: 50%;
+}
+.wc-details-wrap td:first-child {
+  font-weight: 500;
+  color: #969696;
+  padding-right: 10px;
+}
+.wc-details-wrap td:last-child {
+  color: #2b2b2b;
+  font-weight: 600;
+  padding-left: 10px;
+}
+.wc-details-wrap {
+  display: flex;
+}
+.wallet-right-title h3 {
+  font-family: "Visby Round CF";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #323232;
+  margin-bottom: 35px;
+}
+.wallet-right-sec {
+  padding-top: 40px;
+}
+.wallet-top-wrap {
+  margin-bottom: 50px;
+}
+.wallet-chart-container {
+  margin-bottom: 50px;
+}
+.wallet-slider .swiper-slide {
+  box-shadow: 0px 7.13683px 14.2737px rgb(146 123 193 / 30%);
+  border-radius: 35px;
+}
+.wallet-slider .wallet-ac-inner {
+  box-shadow: none;
+}
+.recent-activity-title h3 {
+  font-size: 20px;
+  line-height: 24px;
+  color: #323232;
+}
+.wallet-main-left {
+  padding-right: 60px;
+}
+.swiper-scrollbar-drag {
+  left: 0;
+}
+img.img-size {
+  width: auto;
+  max-width: 100%;
+}
+.wc-details-wrap .card-detail {
+  display: none;
+  width: 100%;
+}
+.w-card-top-img {
+  position: absolute;
+  top: 0;
+  right: auto;
+  left: 0;
+  max-width: 126px;
+  width: 100% !important;
+}
+.w-card-bottom-img {
+  position: absolute;
+  bottom: 0;
+  right: -5px;
+  left: auto;
+  max-width: 300px;
+  width: 100% !important;
+}
+/*  Add to card Updates Start */
+.img-radio img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  left: 0;
+}
+.img-radio .card-img-ic {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 100%;
+}
+.img-radio .img-del-ic {
+  width: 11px;
+  height: 11px;
+  margin: auto;
+}
+.wallet-ac-info-wrap .wallet-ac-inner.bg-img-added {
+  background-color: rgb(0 0 0 / 35%);
+  background-blend-mode: overlay;
+}
+/*  Add to card Updates End */
+/* Fund to your Account Modal Start */
+.fund-acc-modal .modal-dialog {
+  max-width: 532px;
+  margin: auto;
+}
+.fund-acc-modal .modal-content {
+  padding: 50px;
+}
+.fund-payment-option-wrap {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+.fund-payment-option {
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.05);
+  border-radius: 15px;
+  background-color: #fff;
+  padding: 18px;
+  width: 130px;
+  min-width: 130px;
+  height: 100%;
+}
+.fund-payment-option img {
+  margin-bottom: 15px;
+}
+.fund-payment-option p {
+  padding-bottom: 0px !important;
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px !important;
+  line-height: 16px !important;
+}
+.fund-acc-modal .modal-header {
+  padding-bottom: 40px;
+  display: block;
+  text-align: center;
+}
+.fund-acc-modal .modal-header img {
+  margin-bottom: 25px;
+}
+.fund-acc-modal .modal-header h3 {
+  font-size: 32px;
+  line-height: 37px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+.ic-shadow {
+  box-shadow: 0px 9.05357px 18.1071px rgba(0, 0, 0, 0.08);
+  border-radius: 100%;
+}
+/* Fund to your Account Modal End */
