contact module devlopment

--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -320,6 +320,15 @@
   .wallet-bank_link-form-wrap .btns-inline {
     margin-top: 20px;
   }
+  .con-listing-edit-wrap {
+    margin-right: 25px;
+  }
+  .conlist-edit-a {
+    margin-right: 9px;
+  }
+  .con-listing-btn-wrap .btn {
+    padding: 9px 16px;
+  }
 }
 @media only screen and (max-width: 1299px) {
   .con-list-uimg {
