--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -4167,7 +4167,7 @@ cursor:pointer;
 .conlist-edit-a {
   margin-right: 15px;
 }
-.con-list-edit-star .star_fill {
+/* .con-list-edit-star .star_fill {
   display: none;
 }
 .con-list-edit-star.fill_star .star_fill {
@@ -4175,7 +4175,7 @@ cursor:pointer;
 }
 .con-list-edit-star.fill_star .star_border {
   display: none;
-}
+} */
 .con-listing-info {
   display: flex;
   align-items: center;
@@ -4701,4 +4701,23 @@ img.img-size {
 .con-listing-check {
   min-width: 15px;
   margin-right: 20px;
+}
+/* / Custom Search Clear Button / */
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+.form-field.search-field > .clearsearchbox {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12px;
+  left: auto;
+  opacity: 0;
+  cursor: pointer;
+}
+.clearsearchbox > svg {
+  width: 9px;
+}
+.clearsearchbox > svg path {
+  stroke: #0081c5;
 }
