--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -2311,21 +2311,21 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .card-slider .swiper::after,
 .send-whom-slider .swiper::after {
   position: absolute;
-  content: "";
-  display: block;
-  left: auto;
-  right: 0;
-  top: 0;
-  bottom: auto;
-  margin: auto;
-  background-image: url("../../../public/assets/images/recent-contact-slider-shadow.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  width: 44px;
-  height: 87px;
-  background-size: 100% auto;
-  pointer-events: none;
-  z-index: 1;
+	content: "";
+	display: block;
+	left: auto;
+	right: 0;
+	top: 0;
+	bottom: auto;
+	margin: auto;
+	background-image: url("../../../public/assets/images/recent-contact-slider-shadow.png");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	width: 44px;
+	height: 87px;
+	background-size: 100% auto;
+	pointer-events: none;
+	z-index: 1;
 }
 .card-slider .swiper::after {
   right: 0;
@@ -2413,42 +2413,43 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 }
 .send-whom-slider .img-wrap img {
   max-width: 100%;
-  height: auto;
-  border-radius: 47%;
-  max-height: 145px;
-  width: 100%;
-  object-fit: cover;
+	width: 100%;
+	object-fit: cover;
+	border-radius: 50%;
+  height: 100%;
 }
 .send-whom-slider .img-wrap {
-  max-width: 153px;
-  max-height: 153px;
-  box-shadow: 0px 20.434px 40.868px rgba(0, 0, 0, 0.08);
-  border-radius: 47%;
-  border: 4px solid transparent;
-  position: relative;
-  transition: all 0.5s ease-in-out;
-  margin: 0 auto 18px;
+ /*max-width: 153px;
+	max-height: 153px;*/
+	width: 145px;
+  height: 145px;
+  border-radius: 50%;
+	box-shadow: 0px 20.434px 40.868px rgba(0, 0, 0, 0.08);
+	border: 4px solid transparent;
+	position: relative;
+	transition: all 0.5s ease-in-out;
+	margin: 0 auto 18px;
 }
 .send-whom-slider .img-wrap::after {
   position: absolute;
-  content: "";
-  display: block;
-  left: auto;
-  right: 0;
-  top: 0;
-  bottom: auto;
-  margin: auto;
-  width: 36px;
-  pointer-events: none;
-  height: 36px;
-  border-radius: 50%;
-  background-color: #56be15;
-  background-image: url("../../../public/assets/images/tick-arrow.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.5s ease-in-out;
+	content: "";
+	display: block;
+	left: auto;
+	right: 0;
+	top: 0;
+	bottom: auto;
+	margin: auto;
+	width: 36px;
+	pointer-events: none;
+	height: 36px;
+	border-radius: 50%;
+	background-color: #56BE15;
+	background-image: url("../../../public/assets/images/tick-arrow.png");
+	background-repeat: no-repeat;
+	background-position: center center;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.5s ease-in-out;
 }
 .send-whom-slider .img-wrap.selected,
 .send-whom-slider .img-wrap.active,
@@ -2477,14 +2478,14 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   visibility: visible;
 }
 .send-whom-slider .contact-name {
-  font-family: "Visby Round CF";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
-  text-align: center;
-  color: #969696;
-  padding: 0 8px;
+  font-family: 'Visby Round CF';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	text-align: center;
+	color: #969696;
+	padding: 0 8px;
 }
 .send-whom-slider .swiper-wrapper {
   padding-bottom: 59px;
@@ -2492,9 +2493,9 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .send-whom-slider .swiper-horizontal > .swiper-scrollbar,
 .send-whom-slider .swiper-scrollbar.swiper-scrollbar-horizontal {
   width: calc(100% - 110px);
-  left: 0;
-  right: auto;
-  bottom: 7px;
+	left: 0;
+	right: auto;
+	bottom: 7px;
 }
 .send-whom-slider .swiper-button-next,
 .send-whom-slider .swiper-button-prev {
