--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -451,6 +451,7 @@ pointer-events: none;
 }
 .login-signup-content-wrap {
   width: 100%;
+  margin: 20px auto;
   max-width: 535px;
   margin: 0 auto;
   background-color: #fff;
@@ -494,8 +495,8 @@ form .form-field .form-control {
   font-weight: 500;
   font-size: 16px;
   line-height: 140%;
-  color: #bdbdbd;
-  /* color: #363853; */
+  /* color: #bdbdbd; */
+  color: #363853;
 }
 form .form-control::placeholder {
   font-weight: 400;
@@ -567,10 +568,10 @@ form .form-field {
 form {
   margin-bottom: 0;
 }
-.login-signup-content-wrap {
+/*.login-signup-content-wrap {
   max-height: 90vh;
   overflow-y: auto;
-}
+}*/
 .login-other-text:after {
   content: "";
   background: #e0e0e0;
@@ -751,7 +752,7 @@ form .form-field .eye-icon .eye-open {
 
 /* login sign up 03 css start */
 form .form-field select.form-control {
-  background-position: right 20px center;
+  background-position: right 8px center;
   background-size: 13px auto;
   cursor: pointer;
   padding-right: 37px;
@@ -1586,8 +1587,6 @@ margin: auto;
   padding: 55px 60px 40px;
   border: none;
   box-shadow: 0px 12px 50px rgba(37, 31, 48, 0.2);
-  max-height: 85vh;
-  overflow-y: auto;
 }
 .modal-body h3 {
   font-size: 32px;
@@ -4604,3 +4603,26 @@ img.img-size {
   border-radius: 100%;
 }
 /* Fund to your Account Modal End */
+/* Resent OPt */
+.resendOtp {
+  text-align: center;
+  font-size: 18px;
+  line-height: 18px;
+  color: #838080;
+  font-weight: bold;
+  margin: 0px 0px 15px;
+}
+.resendOtp button {
+  font-weight: bold;
+  color: #0080c4;
+  padding: 0px;
+  background-color: transparent !important;
+  border: 0px !important;
+  margin-left: 10px;
+}
+.resendOtp button:hover {
+  color: #363853;
+}
+.resendOtp button.disabled {
+  color: #838080 !important;
+}
