validation schema updated for forms

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -451,8 +451,9 @@ pointer-events: none;
 }
 .login-signup-content-wrap {
   width: 100%;
-  max-width: 535px;
   margin: 20px auto;
+  max-width: 535px;
+  margin: 0 auto;
   background-color: #fff;
   box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
   border-radius: 15px;
@@ -494,7 +495,7 @@ form .form-field .form-control {
   font-weight: 500;
   font-size: 16px;
   line-height: 140%;
-  /*color: #BDBDBD;*/
+  /* color: #bdbdbd; */
   color: #363853;
 }
 form .form-control::placeholder {
@@ -568,8 +569,8 @@ form {
   margin-bottom: 0;
 }
 /*.login-signup-content-wrap {
-max-height: 90vh;
-overflow-y: auto;
+  max-height: 90vh;
+  overflow-y: auto;
 }*/
 .login-other-text:after {
   content: "";
@@ -677,7 +678,7 @@ overflow-y: auto;
   margin-bottom: 12px;
 }
 .login-signup-02 .login-signup-content-wrap h4.blue-text {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 .personal-sign-up .btn {
   margin-top: 10px;
@@ -756,9 +757,6 @@ form .form-field select.form-control {
   cursor: pointer;
   padding-right: 37px;
 }
-form .form-field select.form-control.form-select {
-  padding-right: 30px !important;
-}
 .login-signup-03 .login-btn {
   display: flex;
   flex-wrap: wrap;
@@ -818,6 +816,7 @@ form .form-field select.form-control.form-select {
   width: calc(100% - 221px);
   padding-left: 40px;
   padding-right: 40px;
+  padding-top: 40px;
 }
 .dashboard-left-wrap {
   height: 100%;
@@ -1036,23 +1035,6 @@ form .form-field select.form-control.form-select {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  border: none;
-}
-/* Dashboard Page End By Varsha Rohit  */
-/* Profile Update BY VR  Start */
-.profile-info-right-desc p {
-  margin-bottom: 0px;
-  font-size: 22px;
-  line-height: 25px;
-  font-weight: 500;
-  color: #363853;
-  width: calc(100% - 32px);
-  padding-right: 15px;
-}
-.pi-title-div {width: 180px;}
-.profile-info-right-desc{
-  width: calc(100% - 180px);
-  padding-left: 70px;
 }
 .profile-bottom-info-sec ul li:hover {
   background-color: #fff;
@@ -1413,7 +1395,7 @@ margin: auto;
 .settings-edit-profile-top-sec {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   padding-bottom: 45px;
 }
 .settings-edit-profile-top-sec .upload-profile-image a {
@@ -1425,6 +1407,9 @@ margin: auto;
   line-height: 16px;
   color: #24beef;
   letter-spacing: normal;
+}
+.settings-edit-profile-top-sec .profile-info {
+  padding-top: 27px;
 }
 .settings-edit-profile-inner-sec {
   width: 100%;
@@ -1650,43 +1635,43 @@ form.verification-code-form .form-field .form-control {
   font-family: "Visby Round CF";
   min-width: 160px;
 }
-/*.btn.close-modal {
-min-width: 35px !important;
-position: absolute;
-left: auto;
-right: 0;
-top: 0;
-bottom: auto;
-margin: auto;
-font-size: 0;
-padding: 7px 14px;
-border-radius: 10px !important;
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-align-items: center;
-box-shadow: none;
-visibility: hidden;
+.btn.close-modal {
+  min-width: 35px !important;
+  position: absolute;
+  left: auto;
+  right: 0;
+  top: 0;
+  bottom: auto;
+  margin: auto;
+  font-size: 0;
+  padding: 7px 14px;
+  border-radius: 10px !important;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  box-shadow: none;
+  visibility: hidden;
 }
 .btn.close-modal:focus {
-background-color: #363853 !important;
+  background-color: #363853 !important;
 }
 .btn.close-modal::after {
-content: "x";
-display: flex;
-justify-content: center;
-color: #fff;
-font-size: 20px;
-line-height: normal;
-position: absolute;
-left: 0;
-right: 0;
-top: -3px;
-bottom: 0;
-margin: auto;
-flex-wrap: wrap;
-align-items: center;
-}*/
+  content: "x";
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  font-size: 20px;
+  line-height: normal;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -3px;
+  bottom: 0;
+  margin: auto;
+  flex-wrap: wrap;
+  align-items: center;
+}
 .modal.fade .modal-dialog {
   transform: none;
   margin: auto;
@@ -1780,6 +1765,9 @@ form .search-field -o::placeholder {
   box-shadow: 0px 7.3125px 14.625px rgba(0, 0, 0, 0.08);
   overflow: hidden;
   margin-left: 21px;
+}
+.no-search-ontop {
+  justify-content: end;
 }
 .dashboard-notification-sec {
   display: flex;
@@ -1879,6 +1867,15 @@ form .search-field -o::placeholder {
   height: auto;
   padding-bottom: 45px;
 }
+.card-slider .swiper-slide img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+.card-slider {
+  width: 100%;
+}
 .swiper-button-next,
 .swiper-button-prev {
   left: auto;
@@ -1975,6 +1972,8 @@ form .search-field -o::placeholder {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  /*max-height: 52px;
+  max-width: 52px;*/
 }
 .recent-con-img-wrap {
   width: 52px;
@@ -2219,7 +2218,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   left: 0;
   right: 0;
   top: auto;
-  bottom: 0px;
+  bottom: 0;
   padding: 15px 0;
   text-align: center;
   margin-bottom: 10px;
@@ -2313,7 +2312,11 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 .dashboard-graph-wrap {
   padding-top: 18px;
 }
-
+/*.card-slider .swiper-slide {
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 0px 5.08197px 10.1639px rgba(146, 123, 193, 0.3);
+}*/
 .recent-contact-slider .swiper::after,
 .card-slider .swiper::after,
 .send-whom-slider .swiper::after {
@@ -2338,7 +2341,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   right: 0;
   top: 0;
   background-image: url("../../../public/assets/images/card-swiper-shadow.png");
-  width: 44px;
+  width: 64px;
   height: 100%;
   bottom: 0;
   background-size: 100% 100%;
@@ -2419,7 +2422,10 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   color: #fff;
 }
 .send-whom-slider .img-wrap img {
-  max-width: 100%;
+  /* max-width: 100%;
+  height: auto;
+  border-radius: 47%;
+  max-height: 145px; */
   width: 100%;
   object-fit: cover;
   border-radius: 50%;
@@ -2427,7 +2433,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 }
 .send-whom-slider .img-wrap {
   /*max-width: 153px;
-max-height: 153px;*/
+  max-height: 153px;*/
   width: 145px;
   height: 145px;
   border-radius: 50%;
@@ -2569,6 +2575,7 @@ max-height: 153px;*/
   padding: 13px 52px;
   border-radius: 20px !important;
 }
+
 .send-btn-wrap .save-group-btn,
 .pay-btn-wrap .schedule-pay-btn,
 .pay-btn-wrap .print-details-btn {
@@ -2658,6 +2665,9 @@ max-height: 153px;*/
   overflow: hidden;
 }
 .payee-name-img-wrap .payee-img img {
+  /*max-width: 100%;
+  height: auto; 
+  max-height: 58px;*/
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -3040,6 +3050,7 @@ max-height: 153px;*/
   margin-right: 0;
 }
 .send-group-slider .img-wrap img {
+  /*max-height: 54px;*/
   width: auto;
   margin: 0 auto;
   max-width: 85px;
@@ -3047,6 +3058,7 @@ max-height: 153px;*/
   border-radius: 0 !important;
 }
 .send-group-slider .img-wrap {
+  /*height: 153px;*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -3087,7 +3099,7 @@ max-height: 153px;*/
   border: 1px solid #bdbdbd;
 }
 .group-payment-block .payee-name-img-wrap .payee-img img {
-  max-width: 35px;
+  /*max-height: 23px;*/
   width: 100%;
   height: auto;
   border-radius: 0;
@@ -3179,9 +3191,6 @@ span.date-cal {
   padding: 15px 40px 15px 15px !important;
   font-size: 14px;
   line-height: 16px;
-}
-.activities-sec {
-  padding-bottom: 30px;
 }
 .activities-right-sec {
   padding-top: 40px;
@@ -3409,7 +3418,7 @@ img.img-hover {
   height: 24px;
   border-radius: 50%;
   background-color: #56be15;
-  background-image: url(../../../public/assets/images/tick-12-7.svg);
+  background-image: url("../../../public/assets/images/tick-12-7.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 13px;
@@ -3748,13 +3757,13 @@ div.row {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  overflow: hidden;
 }
 .wallet-slider {
   padding-left: 12px;
 }
 .wallet-ac-info-wrap div,
 .wallet-slider .wallet-ac-inner div {
+  /*z-index: 1;*/
   z-index: 9;
 }
 .wallet-ac-info-wrapp .card-holder-nm {
@@ -3822,7 +3831,6 @@ div.row {
 .bank-logo-wrap[bg-color="yellow"] svg path {
   stroke: #363853;
 }
-
 .cust-image-upload-wrap {
   background: rgba(0, 129, 197, 0.1);
   border: 1px dashed #0081c5;
@@ -3978,6 +3986,7 @@ margin-bottom:0px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
 .wallet-cb-wrap input:checked ~ label:before {
   border-color: #93e06f;
   background-color: #93e06f;
@@ -4265,11 +4274,8 @@ cursor:pointer;
 .conlist-edit-a {
   cursor: pointer;
 }
-.conlist-edit-a {
-  margin-right: 15px;
-}
-.conlist-edit-a:last-child {
-  margin-right: 0px;
+.conlist-edit-a:first-child {
+  margin-right: 20px;
 }
 .con-list-edit-star .star_fill {
   display: none;
@@ -4377,6 +4383,7 @@ ul::-webkit-scrollbar-thumb:hover {
   background-color: transparent;
   transition: all 0.5s ease-in-out;
   border-radius: 15px;
+  overflow-x: auto;
   min-width: -webkit-fit-content;
   min-width: -moz-fit-content;
   min-width: fit-content;
@@ -4521,13 +4528,13 @@ ul::-webkit-scrollbar-thumb:hover {
 }
 .wallet-main-left,
 .wallet-top-wrap .wallet-title-wrap {
-  width: calc(100% - 440px);
+  width: calc(100% - 420px);
   padding-right: 60px;
 }
 .wallet-main-right,
 .wallet-top-wrap .dashboard-notification-sec {
-  width: 440px;
-  padding-left: 40px;
+  width: 420px;
+  padding-left: 45px;
 }
 /* Wallet Page End */
 .wallet-card-add-btns {
@@ -4718,6 +4725,33 @@ img.img-size {
   border-radius: 100%;
 }
 /* Fund to your Account Modal End */
+/* Resent OPt Start */
+.resendOtp {
+  text-align: center;
+  font-size: 18px;
+  line-height: 18px;
+  color: #838080;
+  font-weight: bold;
+  margin: 0px 0px 15px;
+}
+.resendOtp button {
+  font-weight: bold;
+  color: #0080c4;
+  padding: 0px;
+  background-color: transparent !important;
+  border: 0px !important;
+  margin-left: 10px;
+}
+.resendOtp button:hover {
+  color: #363853;
+}
+.resendOtp button.disabled {
+  color: #838080 !important;
+}
+/* Resent OPt End */
+.login-signup-02 {
+  margin: auto;
+}
 .con-listing-check label {
   position: relative;
   margin: 0px;
@@ -5158,7 +5192,4 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 .modal .form-control {
   color: #363853 !important;
-}
-.login-signup-02 {
-  margin: auto;
 }
