--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ code {
   pointer-events: visible !important;
   cursor: not-allowed !important;
 }
-/* / Resend OTP CSS /  */
+/*  Resend OTP CSS  */
 .resend-otp-wrap {
   text-align: center;
   width: 100%;
